[gd_scene format=3 uid="uid://b8m3fl13jnxwl"]

[ext_resource type="Script" uid="uid://0xxn10phgfx3" path="res://window.gd" id="1_kgmfc"]
[ext_resource type="Texture2D" uid="uid://b28mk2dx057gd" path="res://assets/icons/refresh_50dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="2_u2vgl"]
[ext_resource type="Texture2D" uid="uid://cuknvwrjk6u4o" path="res://assets/icons/arrow_back_50dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="3_qltgv"]
[ext_resource type="Texture2D" uid="uid://cauya7nvww7ik" path="res://assets/icons/arrow_forward_50dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="4_x0m2j"]

[node name="Window" type="Window" unique_id=1394439931]
oversampling_override = 1.0
title = "laikX CEF BROWSER"
initial_position = 1
size = Vector2i(464, 388)
min_size = Vector2i(237, 0)
script = ExtResource("1_kgmfc")

[node name="topbar" type="ColorRect" parent="." unique_id=1351705161]
offset_right = 672.0
offset_bottom = 30.0
color = Color(0.2509804, 0.2509804, 0.2509804, 1)

[node name="refresh" type="Button" parent="topbar" unique_id=2064228861]
layout_mode = 0
offset_right = 56.0
offset_bottom = 56.0
scale = Vector2(0.42, 0.42)
icon = ExtResource("2_u2vgl")

[node name="back" type="Button" parent="topbar" unique_id=329835528]
layout_mode = 0
offset_left = 25.0
offset_right = 81.0
offset_bottom = 56.0
scale = Vector2(0.42, 0.42)
icon = ExtResource("3_qltgv")

[node name="forward" type="Button" parent="topbar" unique_id=1899865717]
layout_mode = 0
offset_left = 50.0
offset_right = 106.0
offset_bottom = 56.0
scale = Vector2(0.42, 0.42)
icon = ExtResource("4_x0m2j")

[node name="url" type="LineEdit" parent="topbar" unique_id=1515150820]
layout_mode = 0
offset_left = 75.0
offset_right = 1001.1904
offset_bottom = 56.0
scale = Vector2(0.42, 0.42)
theme_override_font_sizes/font_size = 34
placeholder_text = "search on the Internet"

[node name="browserContainer" type="Control" parent="." unique_id=188411163]
layout_mode = 3
anchors_preset = 0
offset_top = 30.0
offset_right = 672.0
offset_bottom = 390.0

[node name="browserBackground" type="ColorRect" parent="browserContainer" unique_id=1598517283]
layout_mode = 0
offset_right = 672.0
offset_bottom = 368.0
color = Color(0.18717614, 0.18717614, 0.18717614, 1)

[node name="CefTexture" type="CefTexture" parent="browserContainer" unique_id=1307989179]
layout_mode = 0
offset_right = 464.0
offset_bottom = 358.0

[connection signal="pressed" from="topbar/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="topbar/back" to="." method="_on_back_pressed"]
